--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@
     color: #fff;
   }
   
-  #LinkedIn {
+/*   #LinkedIn {
     color:  #124db4;
     border: 1px solid #2fe664;
   }
@@ -215,7 +215,7 @@
   #github:hover {
     background-color: #fff0;
     color: #fff;
-  }
+  } */
   
   .active {
     scale: 1;
